[package]
name = "aeiou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
# bevy_kira_audio = "0.12.0"
bevy_asset_loader = "0.12.1"
bevy_embedded_assets = "0.4.0"

[dependencies.bevy_kira_audio]
version = "0.12.0"
default-features = false
features = [
  "mp3",
]
